--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,19 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            
         </activity>
+        <activity
+            	android:theme="@style/Spotify"
+            	android:name=".ResolveQR">
+	            <intent-filter>
+	          	  <action android:name="android.intent.action.SEARCH" />
+	        	</intent-filter>
+            	<meta-data  android:name="android.app.searchable" android:resource="@xml/searchable" />
+        </activity>
+        <meta-data android:name="android.app.default_searchable"
+                   android:value=".ResolveQR" />
+        
     </application>
 
 </manifest>
